--- a/index.html
+++ b/index.html
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Pick Your Music | Проект 3</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <div class="sidebar">
-        <div style="background: linear-gradient(249.99deg, #2a9adb 26%, #11DEE9 125%);">
-          <h1>Ramphastos cuvieri</h1>
-          <p>Кювьеров тукан</p>
+        <div class="sidebar">
+            <div style="background: linear-gradient(249.99deg, #2a9adb 26%, #11DEE9 125%);">
+                <h1>Ramphastos cuvieri</h1>
+                <p>Кювьеров тукан</p>
+            </div>
+            <div style="background: linear-gradient(215.32deg, #1F6E56 20%, #5B9D46 104%);">
+                <h1>Bradypodion pumilum</h1>
+                <p>Хамелеон</p>
+            </div>
+            <div style="background: linear-gradient(251.87deg, #CC8137 30%, #C5A06D 70%);">
+                <h1>Brachypelma smithi</h1>
+                <p>Паук-птицеед</p>
+            </div>
+            <div style="background: linear-gradient(140.16deg, #8B3C42 -10%, #1B1312 78%);">
+                <h1>Chrysomallon squamiferum</h1>
+                <p>Вулканический моллюск</p>
+            </div>
         </div>
-        <div style="background: linear-gradient(215.32deg, #1F6E56 20%, #5B9D46 104%);">
-          <h1>Bradypodion pumilum</h1>
-          <p>Хамелеон</p>
-        </div>
-        <div style="background: linear-gradient(251.87deg, #CC8137 30%, #C5A06D 70%);">
-          <h1>Brachypelma smithi</h1>
-          <p>Паук-птицеед</p>
-        </div>
-        <div style="background: linear-gradient(140.16deg, #8B3C42 -10%, #1B1312 78%);">
-          <h1>Chrysomallon squamiferum</h1>
-          <p>Вулканический моллюск</p>
-        </div>
-      </div>
-      <div class="main-slide">
-        <div
-          style="
+        <div class="main-slide">
+            <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/2/21/Chrysomallon_squamiferum_2.png');
-          "
-        ></div>
-        <div
-          style="
+          "></div>
+            <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Brachypelma_smithi_2009_G09.jpg/1280px-Brachypelma_smithi_2009_G09.jpg');
-          "
-        ></div>
-        <div
-          style="
+          "></div>
+            <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ed/Cape_dwarf_chameleon_%28Bradypodion_pumilum%29_male.jpg');
-          "
-        ></div>
-        <div
-          style="
+          "></div>
+            <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Wei%C3%9Fbrusttukan.JPG/1280px-Wei%C3%9Fbrusttukan.JPG');
-          "
-        ></div>
-      </div>
-      <div class="controls">
-        <button class="down-button">
-          <i class="fas fa-arrow-down"></i>
-        </button>
-        <button class="up-button">
-          <i class="fas fa-arrow-up"></i>
-        </button>
-      </div>
+          "></div>
+        </div>
+        <div class="controls">
+            <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </div>
     </div>
     <script src="app.js"></script>
-  </body>
+</body>
+
 </html>
