--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </button>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="desktop.js"></script>
+    <script src="mobile.js"></script>
 </body>
 
 </html>
