add progress bar like insta's stories + add sample content

--- a/index.html
+++ b/index.html
@@ -29,19 +29,37 @@
                 <p>Вулканический моллюск</p>
             </div>
         </div>
+        <div class="progress-bar">
+            <div class="progress-bar-inner">
+                <div class="progress-section"></div>
+                <div class="progress-section"></div>
+                <div class="progress-section"></div>
+                <div class="progress-section"></div>
+            </div>
+        </div>
         <div class="main-slide">
             <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/2/21/Chrysomallon_squamiferum_2.png');
-          "></div>
+            ">
+                <h1 style="color: white">11111</h1>
+                <p style="color: white">COntent!! Wow, so much content you wouldn't believe!</p>
+                <div style="width: 10px; height: 10px; background-color: red"></div>
+            </div>
             <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Brachypelma_smithi_2009_G09.jpg/1280px-Brachypelma_smithi_2009_G09.jpg');
-          "></div>
+            ">
+                <h1>2</h1>
+            </div>
             <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ed/Cape_dwarf_chameleon_%28Bradypodion_pumilum%29_male.jpg');
-          "></div>
+            ">
+                <h1>3</h1>
+            </div>
             <div style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Wei%C3%9Fbrusttukan.JPG/1280px-Wei%C3%9Fbrusttukan.JPG');
-          "></div>
+            ">
+                <h1>4</h1>
+            </div>
         </div>
         <div class="controls">
             <button class="down-button">
@@ -52,7 +70,8 @@
             </button>
         </div>
     </div>
-    <script src="desktop.js"></script>
+    <!-- TODO concat scripts, desktop version is broken without desktop scripts -->
+    <!-- <script src="desktop.js"></script> -->
     <script src="mobile.js"></script>
 </body>
 
