add mask div for bleaching out progress bar sections

--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
         </div>
         <div class="progress-bar">
             <div class="progress-bar-inner">
-                <div class="progress-section"></div>
-                <div class="progress-section"></div>
-                <div class="progress-section"></div>
-                <div class="progress-section"></div>
+                <div class="progress-section"><div class="progress-section_playmask"></div></div>
+                <div class="progress-section"><div class="progress-section_playmask"></div></div>
+                <div class="progress-section"><div class="progress-section_playmask"></div></div>
+                <div class="progress-section"><div class="progress-section_playmask"></div></div>
             </div>
         </div>
         <div class="main-slide">
-            <div style="
+            <div class="slide" style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/2/21/Chrysomallon_squamiferum_2.png');
             ">
                 <h1 style="color: white">11111</h1>
                 <p style="color: white">COntent!! Wow, so much content you wouldn't believe!</p>
                 <div style="width: 10px; height: 10px; background-color: red"></div>
             </div>
-            <div style="
+            <div class="slide video" style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Brachypelma_smithi_2009_G09.jpg/1280px-Brachypelma_smithi_2009_G09.jpg');
             ">
                 <h1>2</h1>
             </div>
-            <div style="
+            <div class="slide" style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ed/Cape_dwarf_chameleon_%28Bradypodion_pumilum%29_male.jpg');
             ">
                 <h1>3</h1>
             </div>
-            <div style="
+            <div class="slide" style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Wei%C3%9Fbrusttukan.JPG/1280px-Wei%C3%9Fbrusttukan.JPG');
             ">
                 <h1>4</h1>
