--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
         </div>
         <div class="progress-bar">
             <div class="progress-bar-inner">
-                <div class="progress-section"><div class="progress-section_playmask"></div></div>
-                <div class="progress-section"><div class="progress-section_playmask"></div></div>
-                <div class="progress-section"><div class="progress-section_playmask"></div></div>
-                <div class="progress-section"><div class="progress-section_playmask"></div></div>
+                <div class="progress-section">
+                    <div class="progress-section_playmask"></div>
+                </div>
+                <div class="progress-section">
+                    <div class="progress-section_playmask"></div>
+                </div>
+                <div class="progress-section">
+                    <div class="progress-section_playmask"></div>
+                </div>
+                <div class="progress-section">
+                    <div class="progress-section_playmask"></div>
+                </div>
             </div>
         </div>
         <div class="main-slide">
