create utils.js with some helper functions, add to index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="slide video" style="
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Brachypelma_smithi_2009_G09.jpg/1280px-Brachypelma_smithi_2009_G09.jpg');
-            ">
+            " video-duration="00:02">
                 <h1>2</h1>
             </div>
             <div class="slide" style="
@@ -78,6 +78,7 @@
             </button>
         </div>
     </div>
+    <script src="utils.js"></script>
     <!-- TODO concat scripts, desktop version is broken without desktop scripts -->
     <!-- <script src="desktop.js"></script> -->
     <script src="mobile.js"></script>
