--- a/src/beatwave/index.html
+++ b/src/beatwave/index.html
@@ -7,7 +7,9 @@
             content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet"
             href="styles.css" />
-      <title>Pseudo Beatwave</title>
+      <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+      <title>Почти Beatwave</title>
 </head>
 
 <body>
@@ -23,14 +25,13 @@
       </div>
       <div class="container-modal">
             <div class="modal">
-                  <p>Hit the button to start jammin'!</p>
-                  <button>></button>
+                  <p>Это небольшая копия части функционала Beatwave - жмите на сетку, чтобы поставить ноту,
+                        она воспроизведется когда до них дойдет маркер</p>
+                  <button>Начать джем!</button>
             </div>
       </div>
       <script src="../../dist/main.js"
               type="module"></script>
-      <!-- <script src="app.js"
-              type="module"></script> -->
 </body>
 
 </html>
