--- a/src/beatwave/index.html
+++ b/src/beatwave/index.html
@@ -26,7 +26,7 @@
       <div class="container-modal">
             <div class="modal">
                   <p>Это небольшая копия части функционала Beatwave - жмите на сетку, чтобы поставить ноту,
-                        она воспроизведется когда до них дойдет маркер</p>
+                        она воспроизведется когда до нее дойдет маркер</p>
                   <button>Начать джем!</button>
             </div>
       </div>
