add pause button

--- a/src/beatwave/index.html
+++ b/src/beatwave/index.html
@@ -17,6 +17,7 @@
             <div id="controls">
                   <button class="clear-field">Очистить</button>
                   <button class="mute">Выключить звук</button>
+                  <button class="pause"><i class="fas fa-pause"></i></button>
             </div>
             <div id="board">
 
