edit modal window text

--- a/src/beatwave/index.html
+++ b/src/beatwave/index.html
@@ -26,8 +26,9 @@
       </div>
       <div class="container-modal">
             <div class="modal">
-                  <p>Это небольшая копия части функционала Beatwave - жмите на сетку, чтобы поставить ноту,
-                        она воспроизведется когда до нее дойдет маркер</p>
+                  <p>Это небольшая копия части приложения Beatwave. Нажмите на сетку, чтобы поставить ноту - она
+                        воспроизведется когда до нее дойдет маркер.
+                  </p>
                   <button>Начать джем!</button>
             </div>
       </div>
